Add autocomplete, search, local and seasonal foods
